add shortcut 'e' for browsing comic's file