@@ -1,11 +1,13 @@
 package dev.andrybak.qc.os;
 
+import javax.swing.*;
 import java.awt.*;
+import java.io.File;
 import java.io.IOException;
 import java.net.URI;
 import java.net.URISyntaxException;
 
-public class UrlOpener {
+public class Opener {
 
     public static void openUrl(String url) {
         System.out.println("Opening '" + url + "' in browser...");
@@ -25,11 +27,28 @@ public class UrlOpener {
                 System.err.println("Could not open URL. Got exception " + e);
             }
         } else {
-            openUrlNative(url);
+            openNative(url, new File("."));
         }
     }
 
-    private static void openUrlNative(String url) {
+    public static void browseFileDirectory(Window parent, File f) {
+        System.out.println("Opening '" + f + "' in file browser...");
+        if (f == null)
+            return;
+        if (Desktop.isDesktopSupported() && Desktop.getDesktop().isSupported(Desktop.Action.BROWSE_FILE_DIR)) {
+            try {
+                Desktop.getDesktop().browseFileDirectory(f);
+            } catch (Exception e) {
+                System.err.println("Could not browse file '" + f + "' . Got exception " + e);
+            }
+        } else {
+            JTextField message = new JTextField(f.getAbsolutePath());
+            message.setEditable(false);
+            JOptionPane.showMessageDialog(parent, message, "Cannot open this file", JOptionPane.ERROR_MESSAGE);
+        }
+    }
+
+    private static void openNative(String arg, File dir) {
         final String command;
         switch (OperatingSystem.CURRENT) {
             case LINUX:
@@ -47,8 +66,10 @@ public class UrlOpener {
                 return;
         }
         try {
-            System.out.println("Using '" + command + "' to open '" + url + "'...");
-            Runtime.getRuntime().exec(command + " " + url);
+            System.out.println("Using '" + command + "' to open '" + arg + "'...");
+            ProcessBuilder processBuilder = new ProcessBuilder(command, arg)
+                    .directory(dir);
+            processBuilder.start();
         } catch (IOException e) {
             System.err.println("Could not execute '" + command + "'. Got exception " + e);
         }
